--- a/style.css
+++ b/style.css
@@ -23,12 +23,13 @@ body{
 }
 
 #under-line{
-    height: 4px;
+    height: 5px;
     background-color: pink;
     position: absolute;
     width: 80px;
     left: 0px;
-    top: 52px;
+    bottom: 0;
+    /* top: 52px; */
     padding: 0;
 }
 .task{
@@ -38,6 +39,7 @@ body{
 }
 .task-done{
     text-decoration: line-through;
+    background-color: #d3d3d3; 
 }
 
 .task button {
@@ -55,35 +57,6 @@ body{
 .task i:hover {
     color: #007BFF; 
 }
-.task {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    border-radius: 5px;
-}
-
-.task-done {
-    background-color: #d3d3d3; /* 회색 배경 */
-    text-decoration: line-through; /* 밑줄 (선택사항) */
-}
-
-
-.task {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    /* margin: 5px 0; */
-    border-radius: 5px;
-    /* transition: background 0.3s ease, color 0.3s ease; */
-}
-
-.task-done {
-    background-color: #d3d3d3; /* 회색 배경 */
-    text-decoration: line-through; /* 밑줄 */
-    color: gray;
-}
 
 .task button {
     border: none;
@@ -92,11 +65,6 @@ body{
     cursor: pointer;
     margin: 0 5px;
 }
-
-.task i {
-    color: #333;
-}
-
-.task i:hover {
-    color: #007BFF;
+.task-tabs{
+    cursor: pointer;
 }
